tests/reference/ast_new-try1-a9a22cf.stderr
syntax error: Token ':' is unexpected here
 --> tests/parser/try1.py:1:25
  |
1 | for i in range(3, 0, -1):
  |                         ^ 
